Full screen react
Implemented animated slideshow
More responsive breakpoints
Disabled map

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "fullpage-react": "^3.0.12",
     "gatsby": "^1.9.110",
     "gatsby-link": "^1.6.27",
     "gatsby-plugin-react-helmet": "^1.0.8",
@@ -13,6 +14,8 @@
     "react-anchor-link-smooth-scroll": "^1.0.5",
     "react-dom": "^16.1.1",
     "react-google-maps": "^9.2.2",
+    "react-over-scroll": "^1.1.1",
+    "react-screen": "^0.1.6",
     "react-scrollchor": "^4.0.0",
     "react-scrollspy": "^3.3.4",
     "react-slick": "^0.15.4",
